<resources>
    <string name="app_name">GuideForSucculents_test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник суккулетов</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_cactus">Кактусы</string>
    <string name="menu_haworthia">Хавортии</string>
    <string name="menu_echeveria">Эхеверии</string>
    <string name="menu_aloe">Алоэ</string>
    <string name="menu_recommendation">Полезные советы</string>
    <string name="menu_gallery">Фото-галлерея</string>
    <string name="blablabla">Когда-нибудь, здесь будет какой-то крутой и мега-важный текст</string>
    <string name="cactus_name_1">Нотокактус</string>
    <string name="cactus_name_2">Ребуция</string>
    <string name="cactus_name_3">Эпифиллум</string>
    <string name="cactus_name_4">Цереус</string>
    <string name="cactus_name_5">Рипсалис</string>
    <string name="cactus_name_6">Маммилярии</string>
    <string name="cactus_name_7">Астрофитумы</string>
    <string name="cactus_name_8">Лофофора</string>
    <string name="cactus_name_9">Цефалоцереусы</string>
    <string name="cactus_name_10">Рипсалидопсис</string>
    <string name="cactus_1">Тело растения — в виде шара/цилиндра. Существует около 10-ти подвидов данного сорта с отличающимся по форме/толщине стеблем. Нотокактусы растут очень медленно, нуждаются в обильном поливе (не реже 1-го раза в 7 дней). Зимой их лучше содержать в комнате, где температура воздуха постоянно держится на уровне +10°C. Летом оптимальные температурные показатели для суккулента варьируются в диапазоне +24/+27°C. Стебель кактуса подскажет, когда растению нужна вода (он станет блестящим).

    Продолжительность цветения — 2-3 месяца. Нотокактусы зацветают в марте. Завершается цветоносный период в июле. Оттенок цветков растения бывает разным (от насыщенно-жёлтого до тёмного, с синим/фиолетовым отливом). Кактус цветёт регулярно весь сезон, начиная с 4-го года жизни.

    Тело растения — в виде шара/цилиндра. Существует около 10-ти подвидов данного сорта с отличающимся по форме/толщине стеблем. Нотокактусы растут очень медленно, нуждаются в обильном поливе (не реже 1-го раза в 7 дней). Зимой их лучше содержать в комнате, где температура воздуха постоянно держится на уровне +10°C. Летом оптимальные температурные показатели для суккулента варьируются в диапазоне +24/+27°C. Стебель кактуса подскажет, когда растению нужна вода (он станет блестящим).

    Продолжительность цветения — 2-3 месяца. Нотокактусы зацветают в марте. Завершается цветоносный период в июле. Оттенок цветков растения бывает разным (от насыщенно-жёлтого до тёмного, с синим/фиолетовым отливом). Кактус цветёт регулярно весь сезон, начиная с 4-го года жизни.
    Тело растения — в виде шара/цилиндра. Существует около 10-ти подвидов данного сорта с отличающимся по форме/толщине стеблем. Нотокактусы растут очень медленно, нуждаются в обильном поливе (не реже 1-го раза в 7 дней). Зимой их лучше содержать в комнате, где температура воздуха постоянно держится на уровне +10°C. Летом оптимальные температурные показатели для суккулента варьируются в диапазоне +24/+27°C. Стебель кактуса подскажет, когда растению нужна вода (он станет блестящим).

    Продолжительность цветения — 2-3 месяца. Нотокактусы зацветают в марте. Завершается цветоносный период в июле. Оттенок цветков растения бывает разным (от насыщенно-жёлтого до тёмного, с синим/фиолетовым отливом). Кактус цветёт регулярно весь сезон, начиная с 4-го года жизни.</string>
    <string name="cactus_2">Родина ребуции — Боливия. Внешне кактус напоминает шар, в длину может достигать около 8 см. Вид неприхотлив к месту произрастания, условиям содержания. Однако после пересадки детки молодое растение нужно 2-3 месяца продержать в состоянии покоя, выставив в комнате оптимальный температурный режим (+5°C). Взрослые ребуции хорошо выдерживают температуру до +40 °C. Старайтесь летом выносить их на солнечную, светлую площадку. Хорошо, если она будет продуваться сквозняками, поскольку данному растению постоянно нужен поток свежего воздуха.

    Естественными условиями жизни для ребуций являются полузасушливые высокогорные районы Боливии. Поэтому, если Вы хотите дома выращивать данный вид кактуса, создайте ему аналогичные условия обитания. Летом выносите растение в сад и оставляйте с наветренной стороны. Если суккулент растёт в квартире, в жаркую погоду отправьте его на открытый балкон. Обеспечьте растению хороший дренаж.

    Чтобы стимулировать появление первых цветов, подкормите ребуцию уже в июне. Что касается полива, весной и летом сделайте его умеренным. Поливайте ребуцию с периодичностью 2-4 раза в 30 дней. Осенью, когда на родине этого кактуса начинается сезон дождей, увеличьте количество поливов. Обильно насыщайте растение влагой раз в 2-3 дня.</string>
    <string name="cactus_3">Вид кактуса эпифиллум пользуется особой любовью у цветоводов. Он принадлежит к категории лесных суккулентов и известен больше 200 лет. В составе вида есть около 20 подвидов.

    Вид кактуса Эпифиллум Характерные признаки эпифиллумов:
        - большие цветки длиной до 40 см (вместе с ножкой), которых на каждом растении насчитывается по нескольку десятков;
        - плоский стебель с 4-мя гранями и высотой не больше 1 м;
        - способность стойко переносить засушливую погоду на протяжении долгого временного периода;
        - потребность в подкормках для суккулентной растительности (усиливают цветение).

        Качественный полив обеспечит эпифиллуму обильное цветение. Оптимальный для растения температурный режим летом: +20/+25°C. Если кактус переведён в покой, выставите для него температурный режим на уровне +10/+15°C. В это время поливайте эпифиллум не чаще 2-х раз в 30 дней, а лучше — полностью исключите поливы.</string>
    <string name="cactus_4">Цереус — вид кактуса, который в природных условиях вырастает до огромных размеров! Длительность его жизни: 200-300 лет. Известны случаи, когда растение выросло до 20 м высотой! Его название переводится как «свеча». Дома цветоводы выращивают карликовые сорта цереуса.

    Суккулент зацветает в мае-июне, причём его цветки распускаются исключительно ночью. Соцветия красивые и хорошо пахнут. Внешне напоминают огромные лилии, располагаются в боковой части основного стебля.

    Многие из цветоводов заводят кактус цереус ради того, чтобы полюбоваться его шикарным цветком. Если за растением ухаживать правильно, оно зацветает регулярно. Интересно, что цереус цветёт всего 24 часа. Поливать его нужно умеренно. Рекомендованная температура воды — немного выше комнатной (на 3-5°C).

    Этот вид кактусов предпочитает расти в обилии света, однако суккулент нельзя помещать под прямые лучи солнца. Уже в середине весны Вы можете отправить его на улицу, в полутень. Только в сентябре можно возвращать кактус обратно в дом.</string>
    <string name="cactus_5">Рипсалисы — представители семейства кактусовых с необычной внешностью. Тропическое растение выглядит оригинально, имеет множество переплетённых ветвей зелёного цвета. Выращивать его лучше в горшках, установленных на высокие подставки или подвешенных на специальные опоры. Растение полностью оплетает опору примерно за 3 года жизни.

    Рипсалис — эпифит с корешками малой длины. Суккулент в основном использует их для прикрепления к опоре.

    Стебель кактуса хорошо разветвлён, его длина не превышает 1,5 м. Толщина веточек — всего 4-5 мм. Тело рипсалиса покрыто множеством цветоносных ареол. После завершения периода цветения на веточках кактуса появляются ягодки тёмного цвета, схожие по своему размеру и виду с чёрной смородиной.</string>
    <string name="cactus_6">Распространённый вид кактусов, поверхность которых покрыта множеством ареол. Почки отличаются своей формой и не являются цветоносами. Цветочки появляются из пазух, расположенных между ареолами. Оптимальные условия произрастания для этого растения — много света и тепла.

    Суккулент требователен к уходу. Если цветовод всё делает правильно, маммилярия наверняка порадует его множественным цветением.

    Критические колебания температур на протяжении суток (больше 8-11°C) — губительны для маммилярий. Летом обеспечьте растению комфортную температуру для произрастания (не меньше +15 °C). Интересно, что зимой данный вид кактуса выживает и продолжает развиваться при температуре воздуха +10°C. Но с наступлением тёплых весенних дней переводите его на летний режим.</string>
    <string name="cactus_7">Главная особенность астрофитума — ребристый стебель. Максимальное количество рёбер у растения — 10 штук. В основном встречаются особи с 5-ю лучиками. Стебель кактуса сам по себе очень жёсткий, поэтому иглы растению для дополнительной защиты не нужны.

    Астрофитум зацветает на 2-й год жизни. Продолжительность цветения — короткая, в основном — до 3-х дней. Оттенки цветочков — разнообразные (красные, жёлтые) и зависят от подвида.</string>
    <string name="cactus_8">Кактус лофофора (пейотль, пейот) — растение, запрещённое для культивирования во многих странах на законодательном уровне. Многие цветоводы несмотря на запрет выращивают лофофору и демонстрируют кактусы на фото.

    Небольшое цилиндрическое/шарообразное растение с гладкой поверхностью не имеет на своём теле никаких колючек. Диаметр шарообразных лофофор не превышает 9 см.

    Цветёт суккулент на протяжении месяца, формирование цветков происходит на верхушке. Их количество зависит от возраста растения (у старых кактусов соцветий больше). Корни лофофоры — мощные и хорошо развитые. Они становятся основой для формирования деток растения.</string>
    <string name="cactus_9">Цефалоцереус — латинское наименование, означающее «голова старца». Действительно, внешне растение напоминает седовласую голову старика. Его стебель полностью покрыт длинным белым пухом.

    Суккулент характеризуется медленным ростом, однако в природных условиях существования достигает невероятных размеров (диаметр ствола — до полуметра; высота — до 15 м).

    При домашнем культивировании вида рост кактуса не ограничен. Даже дома цефалоцереус может вымахать до природных размеров, если не прищипнуть его корневую систему. Летом обеспечьте растению проветривание и достаточное освещение. Не забывайте и об умеренном поливе с периодичностью 3 раза в 30 дней.

    Зимой данный сорт требует покоя и полного отсутствия поливов. Оптимальная для него температура в холодное время года: +5°C. Диаметр некоторых соцветий достигает 10 см. Цветки имеют специфический отталкивающий запах. В условиях дикой природы они используют его для приманки летучих мышей.</string>
    <string name="cactus_10">Рипсалидопсис известен цветоводам под названием «декабрист». Его стебельки складываются из нескольких овальных элементов, а цветение начинается в конце декабря, на католическое Рождество. Существует много разновидностей рипсалидопсиса, отличающихся цветом/формой стебля.

    Растение-эпифит имеет непродолжительный период покоя осенью (всего 1 месяц). В конце года кактус начинает активно цвести. Фаза вегетации у суккулента начинается спустя 30 дней после завершения цветения и формирования плодов. Вегетация продолжается до нового состояния покоя. В этот период зелёная масса растения существенно увеличивается, поэтому кактусу нужны регулярные пересадки. Пересаживать суккулент лучше после завершения цветения. Новый горшок должен быть по размеру в 1,5-2 раза больше предыдущего.</string>
    <string name="haworthia_name_1">Аттенуата</string>
    <string name="haworthia_name_2">Полосатая</string>
    <string name="haworthia_name_3">Жемчужная</string>
    <string name="haworthia_name_4">Рейнвардта</string>
    <string name="haworthia_name_5">Лимолистная</string>
    <string name="haworthia_name_6">Хавортия Ретуза</string>
</resources>